--- a/package.json
+++ b/package.json
@@ -9,14 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.15.0",
     "@types/node": "20.10.5",
     "@types/react": "18.2.45",
     "@types/react-dom": "18.2.18",
+    "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
     "next": "14.0.4",
+    "next-auth": "^4.24.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.3.3"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.12.0",
+    "react-spinners": "^0.13.8",
+    "swr": "^2.2.5",
+    "typescript": "5.3.3",
+    "zustand": "^4.5.2"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "prisma": "^5.15.0",
+    "tailwindcss": "^3.4.0"
   }
 }
