--- a/.env
+++ b/.env
@@ -5,5 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://manojrockstar5458:manoj@cluster0.flj6rrz.mongodb.net/test"
+NEXT_AUTH_URL="http:localhost:3000/"
 NEXTAUTH_JWT_SECRET = "NEXT_AUTH_JWT_SECRET"
 NEXTAUTH_SECRET = "NEXT_AUTH_SECRET"
