--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.2.18",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "date-fns": "^3.6.0",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
     "next": "14.0.4",
